# WindowingTenkai

./: .gitignore  CMakeLists.txt
source/include/: IWindowManager.h
source/include/glfw/: GLFWWindowManager.h
source/src/: main.cpp
source/src/glfw/: GLFWWindowManager.cpp
